# keymux

./: .SRCINFO  .gitignore  ARCHITECTURE.md  Cargo.toml  DEBUG_NOTES.md  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  README.md  REWRITE_PLAN.md  TESTING.md  config.example.ron  config.example.toml  install.sh  keyboard-middleware-niri.service  keyboard-middleware.install  keyboard-middleware.service  run-debug.sh
.github/workflows/: pr.yml  release.yml
aur/: .SRCINFO  PKGBUILD  keymux.install
openrc/: keymux  keymux-bspwm  keymux-hyprland  keymux-i3  keymux-niri  keymux-sway
runit/keymux/: run
runit/keymux-bspwm/: run
runit/keymux-bspwm/log/: run
runit/keymux-hyprland/: run
runit/keymux-hyprland/log/: run
runit/keymux-i3/: run
runit/keymux-i3/log/: run
runit/keymux-niri/: run
runit/keymux-niri/log/: run
runit/keymux-sway/: run
runit/keymux-sway/log/: run
runit/keymux/log/: run
src/: adaptive_stats.rs  cli.rs  config.rs  daemon.rs  daemon_display.rs  debug.rs  display.rs  event_processor.rs  gamemode.rs  ipc.rs  keyboard_id.rs  keyboard_state.rs  keyboard_thread.rs  keycode.rs  keymap.rs  lib.rs  list.rs  main.rs  niri.rs  niri_daemon.rs  oneshot.rs  process_event_new.rs  session_manager.rs  socd.rs  tests.rs  toggle.rs  uinput.rs  window.rs
src/config/: config.rs  config_manager.rs  mod.rs  validator.rs
src/daemon/: daemon.rs  daemon_display.rs  mod.rs
src/event_processor/: adaptive.rs  keymap.rs  layer_stack.rs  mod.rs
src/event_processor/actions/: cmd.rs  doubletap.rs  dt.rs  handlers.rs  layer.rs  mod.rs  modtap.rs  mt.rs  oneshot.rs  osm.rs  socd.rs
src/hyprland/: hyprland_daemon.rs  mod.rs  mod_impl.rs  sway_daemon.rs
src/niri/: gamemode_detection.rs  mod.rs  niri.rs  niri_daemon.rs
src/ui/: display.rs  mod.rs  window.rs
src/window_manager/: mod.rs
src/x11/: bspwm_daemon.rs  i3_daemon.rs  impl_mod.rs  mod.rs
systemd/: keymux-bspwm.service  keymux-hyprland.service  keymux-i3.service  keymux-niri.service  keymux-sway.service  keymux.service
tests/: config_tests.rs  keymap_tests.rs
