[package]
name = "keyboard-middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.11"
console = "0.15"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
