[package]
name = "keyboard-middleware"
version = "0.12.0"
edition = "2021"

[[bin]]
name = "keyboard-middleware"
path = "src/main.rs"

[dependencies]
evdev = "0.12"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
dialoguer = "0.11"
console = "0.15"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
bincode = "1.3"
libc = "0.2"
smallvec = "1.13"
colored = "2.1"
notify = "6.1"
tokio = { version = "1.41", features = ["full"] }
crossbeam-channel = "0.5"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
incremental = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

# Profile-guided optimization setup (use after profiling)
# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"
# strip = true
# overflow-checks = false
#
# Run with:
# 1. RUSTFLAGS="-Cprofile-generate=/tmp/pgo-data" cargo build --release
# 2. ./target/release/keyboard-middleware  # Use normally to generate profile
# 3. llvm-profdata merge -o /tmp/pgo-data/merged.profdata /tmp/pgo-data
# 4. RUSTFLAGS="-Cprofile-use=/tmp/pgo-data/merged.profdata" cargo build --release
